modified:   C Test/C Personal Test.c 	modified:   C Test/Config.ini
Changes not staged for commit:
	modified:   C Test/C Personal Test.c
	deleted:    C Test/Config.ini
	deleted:    C Test/FilePosTest.txt
	deleted:    C Test/OpenFileTime.txt
	deleted:    C Test/OpenFileTime_0.99.txt
	deleted:    C Test/OpenFileTime_0.999.txt
	deleted:    C Test/localFile.txt

Untracked files:
	C Test/MultiFileGolbleVariable.c
	C Test/Others/
	IniRead.h

--- a/C Test/Config.ini
+++ b/C Test/Config.ini
@@ -2,9 +2,10 @@
 
 #-------------#作为注释--------------------------------------------------------------------
 #Last Open Time
-year=
-month=
-day=
-hour=
-min=
-sec=
+#woq还好刚好提交了git要不然下面写的都没了呜呜呜
+year=2020
+month=11
+day=9
+hour=13
+min=53
+sec=25
